<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5D3E1"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/plco"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:background="#2196F3"
                android:text="INEI : FORMULARIO DE CENSO"
                android:textAlignment="center"
                android:textColor="#E4DBDB"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtan"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/plan"
                android:layout_width="208dp"
                android:layout_height="43dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/plan"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/txco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txco"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/plco"
                android:layout_width="208dp"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/plco"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/txtcl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtcl"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/plc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/pl"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/tf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tf"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/pf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/pf"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/tfh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tff"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/tfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="date"
                android:text="@string/tpf"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/h"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/hh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="time"
                android:text="@string/hh"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/zs"
                android:textSize="8sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/u"
                    android:textSize="8sp" />

                <RadioButton
                    android:id="@+id/r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r"
                    android:textSize="8sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/vr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/vr"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/vrr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/i"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/pr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ghd"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/ii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/ii"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/op"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pr"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/o"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc"
                android:textSize="8sp" />

            <CheckBox
                android:id="@+id/pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pp"
                android:textSize="8sp" />

            <CheckBox
                android:id="@+id/gt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt"
                android:textSize="8sp" />

            <CheckBox
                android:id="@+id/pll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pll"
                android:textSize="8sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pt"
                android:textSize="8sp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otr"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btn_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#028DD2"
                android:drawableLeft="@drawable/baseline_send_24"
                android:text="Button"
                tools:text="Enviar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>